# me449-homework

./: .gitignore  README.md  assignment_2.py  assignment_3.py  assignment_4.md  assignment_4.py  assignment_5.py  assignment_6.md  assignment_6.py  coursera_ch4.py  coursera_ch5.py  coursera_ch6.py  coursera_ch7.py  coursera_ch9.py  main.py  pyproject.toml  requirements.txt
config/: a6_demo1.toml
lib/: a6data.py  printers.py
