[project]
name = "lynch-python-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modern-robotics",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]

[tool.uv.sources]
modern-robotics = { path = "../ModernRobotics/packages/Python" }
